# goal-cascade-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.goal/runs/02782fb3/: events.jsonl  iteration_1.txt  rag-status.json  state.json  timeline.md
.goal/runs/02bc8036/: events.jsonl  iteration_4.txt  rag-status.json  state.json  timeline.md
.goal/runs/09bd91d3/: events.jsonl  prompt_4_arbiter.txt  rag-status.json  state.json  timeline.md
.goal/runs/0fb925c5/: events.jsonl  rag-status.json  run-metadata.json  state.json  timeline.md
.goal/runs/10585868/: events.jsonl  prompt_1_synthesizer.txt  rag-status.json  state.json  timeline.md
.goal/runs/1079dc52/: events.jsonl  rag-status.json  run-metadata.json  state.json  timeline.md
.goal/runs/1085b18d/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/1b61af66/: events.jsonl  iteration_2.txt  rag-status.json  state.json  timeline.md
.goal/runs/1e2774fa/: events.jsonl  prompt_1_producer.txt  rag-status.json  state.json  timeline.md
.goal/runs/1f1a34e7/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/1fa6492f/: events.jsonl  rag-status.json  state.json  synthesis_3.json  timeline.md
.goal/runs/23d8bfe0/: events.jsonl  iteration_1.txt  prompt_1_producer.txt  prompt_1_synthesizer.txt  rag-status.json  run-metadata.json  state.json  synthesis_1.json  timeline.md
.goal/runs/267956bf/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/33e6681a/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/36066d57/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/3f2fc3ef/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/407882d6/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/4607e090/: events.jsonl  rag-status.json  run-metadata.json  state.json  timeline.md
.goal/runs/4bcaad26/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/4db9c73e/: events.jsonl  iteration_2.txt  iteration_3.txt  prompt_1_producer.txt  prompt_2_synthesizer.txt  prompt_3_adversary.txt  prompt_3_synthesizer.txt  prompt_4_arbiter.txt  rag-status.json  state.json  synthesis_3.json  timeline.md
.goal/runs/4e7c35ff/: events.jsonl  iteration_3.txt  rag-status.json  state.json  timeline.md
.goal/runs/500cad4d/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/50623cc2/: events.jsonl  iteration_1.txt  iteration_2.txt  prompt_1_synthesizer.txt  prompt_2_critic.txt  prompt_2_synthesizer.txt  prompt_3_adversary.txt  rag-status.json  run-metadata.json  state.json  synthesis_1.json  synthesis_2.json  timeline.md
.goal/runs/54505bc4/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/54da1f82/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/570ca257/: events.jsonl  final_output.md  iteration_1.txt  iteration_2.txt  iteration_3.txt  prompt_1_synthesizer.txt  prompt_2_critic.txt  prompt_2_synthesizer.txt  prompt_3_adversary.txt  prompt_3_synthesizer.txt  prompt_4_arbiter.txt  rag-status.json  state.json  synthesis_1.json  synthesis_2.json  synthesis_3.json  timeline.md
.goal/runs/57dcf3d1/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/5d2f3384/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/5e77f225/: events.jsonl  rag-status.json  state.json  timeline.md
.goal/runs/62cb9ee0/: events.jsonl  iteration_1.txt  iteration_3.txt  iteration_4.txt  prompt_1_synthesizer.txt  prompt_2_critic.txt  prompt_3_adversary.txt  prompt_4_arbiter.txt  rag-status.json  run-metadata.json  state.json  synthesis_2.json  timeline.md
docs/: release-procedure.md
docs/specs/: addendum-chef-orchestre-ia.md  framework-multi-agents.md  goal-cascade-implementation-v2.md  goal-cascade-multi-cascade.md  reference-qwen-plan-chirurgical.md
src/goal_cascade/: __init__.py  audit_journal.py  cli.py  config.py  rag_bridge.py
tests/: conftest.py  test_anthropic_cache.py  test_audit_journal.py  test_budget_tracker.py  test_cascade_cicd_wiring.py  test_cascade_graph.py  test_cicd_hook.py  test_cicd_hook_security.py  test_cli_config.py  test_config.py  test_dashboard.py  test_data_confidentiality.py  test_drift_detector.py  test_execution_context.py  test_executor_contract.py  test_frozen_spec_enrichment.py  test_integration_resume.py  test_kimi_provider.py  test_mirascope_provider.py  test_module_graph.py  test_multi_executor.py  test_multi_executor_security.py  test_packaging.py  test_prompt_loader.py  test_prompt_loader_security.py  test_provider_router.py  test_rag_bridge.py  test_rag_embed.py  test_rag_package.py  test_rag_worker.py  test_rate_limit_toml.py  test_rate_limiter.py  test_receipt.py  test_resilience_antipatterns.py  test_semantic_cache.py  test_synthesis_quality.py  test_variants.py  test_versioning.py
tests/integration/: test_goal_run_smoke.py  test_real_provider_smoke.py
(+425 files in other folders)
