[project]
name = "goal-cascade"
version = "0.3.0"
description = "G.O.A.L. Cascade — Multi-agent cascade framework for high-quality AI deliverables"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Eddie" }]
keywords = ["ai", "llm", "cascade", "multi-agent", "pydantic", "typer"]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Provider real APIs (install when ready to use real LLMs)
llm = [
    "mirascope>=1.0",
    "anthropic>=0.40",
    "structlog>=24.0",
]
# Mock mode needs no extra deps — pure Python simulation

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
]

[project.scripts]
goal = "goal_cascade.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goal_cascade = ["prompts/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # longueurs de ligne gérées par line-length
    "UP042", # str+Enum est un pattern volontaire pour Typer/Pydantic
    "B008",  # typer.Option(...) dans les defaults est un pattern Typer normal
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
show_error_codes = true

# LangGraph StateGraph uses dict[Any, Any] as state type — incompatible
# with typed CascadeState attributes. Framework limitation, not code bugs.
[[tool.mypy.overrides]]
module = "goal_cascade.orchestrator.cascade_graph"
ignore_errors = true

[tool.coverage.run]
source = ["src/goal_cascade"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
